--- a/vue_basic/01-intro/hello.html
+++ b/vue_basic/01-intro/hello.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
+    <div id="root">
+        <h1>hi, {{name1}} ,{{age}},{{Date.now()}}</h1>
+    </div>
 
+
+
+    <script type="text/javascript">
+        Vue.config.productionTip = false;
+
+        new Vue({
+            el: '#root',
+            data: {
+                name1: 'frank',
+                age: '22'
+            }
+        });
+
+    </script>
 </body>
+
 
 </html>
