--- a/vue_basic/01-intro/hello.html
+++ b/vue_basic/01-intro/hello.html
@@ -12,7 +12,7 @@
 <body>
     <div id="root">
         <h1>hi, {{name1.toUpperCase()}} ,{{age}},{{Date.now()}}</h1>
-        <a v-bind:href="link">btn</a>
+        <a :href="link">btn</a>
     </div>
 
 
