--- a/vue_basic/01_intro/hello.html
+++ b/vue_basic/01_intro/hello.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="root">
-        <h1>hi, {{name1.toUpperCase()}} ,{{age}},{{Date.now()}}</h1>
+        <h1>hi, {{user.name.toUpperCase()}} ,{{user.age}},{{Date.now()}}</h1>
         <a :href="link">btn</a>
     </div>
 
@@ -23,8 +23,10 @@
         new Vue({
             el: '#root',
             data: {
-                name1: 'frank',
-                age: '22',
+                user: {
+                    name: 'frank',
+                    age: '22'
+                },
                 link: 'https://space.bilibili.com/397653559/fans/follow'
             }
         });
