--- a/vue_basic/03_dataBind/data_bind.html
+++ b/vue_basic/03_dataBind/data_bind.html
@@ -22,7 +22,7 @@
     <script type="text/javascript">
         Vue.config.productionTip = false;
 
-        const v = new Vue({
+        const vm = new Vue({
             // el: '#root',
             data() {
                 return {
@@ -34,7 +34,7 @@
                 }
             }
         });
-        v.$mount('#root');
+        vm.$mount('#root');
     </script>
 </body>
 
