--- a/vue_basic/03_dataBind/data_bind.html
+++ b/vue_basic/03_dataBind/data_bind.html
@@ -18,6 +18,9 @@
             鼠标悬停几秒钟查看此处动态绑定的提示信息！
         </span>
         <h1>date: {{user2.date}}</h1>
+        <li v-for="text in texts">
+            {{text.name}}
+        </li>
     </div>
 
 
@@ -32,7 +35,11 @@
                         name: 'frank',
                         age: 22,
                         date: new Date().toLocaleString()
-                    }
+                    },
+                    texts: [
+                        { name: 'jhon' },
+                        { name: 'lily' },
+                    ]
                 }
             }
         });
