--- a/vue_basic/03_dataBind/data_bind.html
+++ b/vue_basic/03_dataBind/data_bind.html
@@ -27,7 +27,7 @@
 
     <script type="text/javascript">
         Vue.config.productionTip = false;
-
+        let un = document.querySelector('#root');
         const vm = new Vue({
             data() {
                 return {
