--- a/vue_basic/06_dataProxy/proxy.html
+++ b/vue_basic/06_dataProxy/proxy.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+    <script type="text/javascript">
+        let person = {
+            name: 'frank',
+            sex: 'male'
+        }
+        Object.defineProperty(person, 'age', {
+            value: {
+                val: 18,
+                time: Date.now()
+            }
+        });
+        console.log(person)
+    </script>
 
 </body>
 
