--- a/vue_basic/06_dataProxy/proxy.html
+++ b/vue_basic/06_dataProxy/proxy.html
@@ -20,7 +20,8 @@
                 time: Date.now()
             }
         });
-        console.log(person)
+        console.log(person);
+        console.log(Object.keys(person));
     </script>
 
 </body>
