--- a/vue_basic/08_count_property/3_compute.html
+++ b/vue_basic/08_count_property/3_compute.html
@@ -29,11 +29,14 @@
             computed: {
                 full: {
                     get() {
-                        // console.log(this);
+                        console.log(this);
                         let fullname = this.last + '.' + this.first;
                         return fullname;
                     },
-
+                    set() {
+                        this.last = this.full.slice('.');
+                        this.first = this.full.sub
+                    }
                 }
             },
         })
