--- a/vue_basic/08_count_property/3_compute.html
+++ b/vue_basic/08_count_property/3_compute.html
@@ -35,7 +35,8 @@
                     },
                     set() {
                         this.last = this.full.slice('.');
-                        this.first = this.full.sub
+                        this.first = this.full.substring(this, full.);
+                        this.full
                     }
                 }
             },
