--- a/vue_basic/08_count_property/3_compute.html
+++ b/vue_basic/08_count_property/3_compute.html
@@ -40,6 +40,7 @@
                 //         this.first = arr[1];
                 //     }
                 // }
+                // Abbreviation
                 full() {
                     // console.log(this);
                     let fullname = this.last + '.' + this.first;
