--- a/vue_basic/09_supervise/2_cloud_sup.html
+++ b/vue_basic/09_supervise/2_cloud_sup.html
@@ -36,7 +36,15 @@
                     }
                 }
 
-            }
+            },
+            watch: {
+                isHot: {
+                    handler(a, b) {
+                        console.log(a, b);
+                    },
+                    immediate: true,
+                }
+            },
         })
     </script>
 </body>
