--- a/vue_basic/10_bindStyle/bindClass.html
+++ b/vue_basic/10_bindStyle/bindClass.html
@@ -11,6 +11,7 @@
         .basic {
             width: 400px;
             height: 400px;
+            border: 1px, solid, black;
         }
 
         .happy {
