--- a/vue_basic/10_bindStyle/bindClass.html
+++ b/vue_basic/10_bindStyle/bindClass.html
@@ -38,7 +38,7 @@
 <body>
     <div id="root">
         <div class="basic" :class="mood" @click="changeMood">text</div>
-        <div class="basic" :class="classArr" @click="changeMood">text</div>
+        <div class="basic" :class="classArr">text</div>
     </div>
     <script>
         Vue.config.productionTip = false;
