--- a/vue_basic/12_list_render/1.basic_list.html
+++ b/vue_basic/12_list_render/1.basic_list.html
@@ -11,10 +11,8 @@
 
 <body>
     <div id="root">
-        <ul v-for="user in users">
-            <li> {{user.id}} </li>
-            <li> {{user.name}} </li>
-            <li> {{user.age}} </li>
+        <ul>
+            <li v-for="user in users"> {{user.id}}-{{user.name}}-{{user.age}}</li>
         </ul>
     </div>
     <script>
