--- a/vue_basic/12_list_render/1.basic_list.html
+++ b/vue_basic/12_list_render/1.basic_list.html
@@ -12,7 +12,7 @@
 <body>
     <div id="root">
         <ul>
-            <li v-for="user in users">
+            <li v-for="user in users" :key="user.id">
                 {{user.id}}-{{user.name}}-{{user.age}}
             </li>
         </ul>
