--- a/vue_basic/12_list_render/1.basic_list.html
+++ b/vue_basic/12_list_render/1.basic_list.html
@@ -11,11 +11,12 @@
 
 <body>
     <div id="root">
-        <button @click="addFirst"></button>
-        <button @click="addLast"></button>
+        <button @click="addFirst">addFirst</button>
+        <button @click="addLast">addLast</button>
         <ul>
-            <li v-for="(user,index) in users" :key="index">
+            <li v-for="(user,index) in users" :key="user.id">
                 {{index}}-{{user.id}}-{{user.name}}-{{user.age}}
+                <input type="text">
             </li>
         </ul>
     </div>
