--- a/vue_basic/12_list_render/3.list_filter.html
+++ b/vue_basic/12_list_render/3.list_filter.html
@@ -54,7 +54,8 @@
                         this.tmp_users = this.users.filter((u) => {
                             return u.name.indexOf(val) >= 0;
                         })
-                    }
+                    },
+                    immediate: true,
                 }
             },
         })
