--- a/vue_basic/12_list_render/3.list_filter.html
+++ b/vue_basic/12_list_render/3.list_filter.html
@@ -23,7 +23,42 @@
         </ul>
     </div>
     <script>
-        Vue.config.productionTip = false;
+        // Vue.config.productionTip = false;
+        // const vm = new Vue({
+        //     el: '#root',
+        //     data() {
+        //         return {
+        //             users: [
+        //                 { id: 1, name: 'frank', age: 22 },
+        //                 { id: 2, name: 'mike', age: 21 },
+        //                 { id: 3, name: 'lily', age: 23 },
+        //                 { id: 5, name: 'json', age: 13 }
+        //             ],
+        //             tmp_users: [],
+        //             user4: { id: 4, name: 'x', age: 11 },
+        //             key_word: ''
+        //         };
+        //     },
+        //     methods: {
+        //         addFirst() {
+        //             this.users.unshift(this.user4);
+        //         },
+        //         addLast() {
+        //             this.users.push(this.user4);
+        //         },
+        //     },
+        //     watch: {
+        //         key_word: {
+        //             immediate: true,
+        //             handler(val) {
+        //                 console.log(val);
+        //                 this.tmp_users = this.users.filter((u) => {
+        //                     return u.name.indexOf(val) >= 0;
+        //                 })
+        //             },
+        //         }
+        //     },
+        // })
         const vm = new Vue({
             el: '#root',
             data() {
@@ -36,7 +71,7 @@
                     ],
                     tmp_users: [],
                     user4: { id: 4, name: 'x', age: 11 },
-                    key_word: ''
+
                 };
             },
             methods: {
@@ -47,17 +82,17 @@
                     this.users.push(this.user4);
                 },
             },
-            watch: {
+            computed: {
                 key_word: {
-                    immediate: true,
-                    handler(val) {
-                        console.log(val);
-                        this.tmp_users = this.users.filter((u) => {
-                            return u.name.indexOf(val) >= 0;
-                        })
+                    get() {
+                        // console.log(this);
+
                     },
-                }
-            },
+                    set(value) {
+
+                    }
+                },
+            }
         })
     </script>
 </body>
