propare for new day vue project

--- a/vue_basic/12_list_render/vueset.html
+++ b/vue_basic/12_list_render/vueset.html
@@ -28,6 +28,12 @@
                         { id: 3, name: 'lily', age: 23 },
                         { id: 5, name: 'json', age: 12 }
                     ],
+                    basic_msg: {
+                        type: 'json',
+                        content: {
+                            cost: 20,
+                        }
+                    },
                     user4: { id: 4, name: 'x', age: 11 },
                     key_word: '',
                     sortType: 0
