--- a/vue_basic/13_collectFormData/1_colectFormData.html
+++ b/vue_basic/13_collectFormData/1_colectFormData.html
@@ -12,7 +12,8 @@
 <body>
     <div id="root">
         <form>
-
+            account: <input type="text"><br /><br />
+            password:<input type="password">
         </form>
     </div>
 </body>
