--- a/vue_basic/13_collectFormData/1_colectFormData.html
+++ b/vue_basic/13_collectFormData/1_colectFormData.html
@@ -13,7 +13,8 @@
     <div id="root">
         <form>
             account: <input type="text"><br /><br />
-            password:<input type="password">
+            password:<input type="password"><br /><br />
+
         </form>
     </div>
 </body>
