--- a/vue_basic/13_collectFormData/1_colectFormData.html
+++ b/vue_basic/13_collectFormData/1_colectFormData.html
@@ -14,7 +14,27 @@
         <form>
             account: <input type="text"><br /><br />
             password:<input type="password"><br /><br />
-
+            male: <input type="radio" name="sex">
+            female:<input type="radio" name="sex"><br /><br />
+            hobby:
+            learn<input type="checkbox" name="">
+            read<input type="checkbox" name="">
+            write<input type="checkbox" name="">
+            <br /><br />
+            location:
+            <select>
+                <option value="">select address</option>
+                <option value="shang hai">shang hai</option>
+                <option value="hang zhou">hang zhou</option>
+                <option value="bei jing">bei jing</option>
+            </select>
+            <br /><br />
+            description:<br />
+            <textarea></textarea>
+            <br /><br />
+            <input type="checkbox">accept
+            <br /><br />
+            <button>submit</button>
         </form>
     </div>
 </body>
